@@ -2,7 +2,7 @@
 
 ## Purpose
 
-This document provides a complete, step-by-step protocol for benchmarking OJP (Open JDBC Pooler)
+This document provides a complete, step-by-step protocol for benchmarking OJP (Open J Proxy)
 and PgBouncer using the OJP Performance Tester Tool. It specifies the deployment topology,
 hardware requirements, software configuration, workload definitions, load levels, acceptance
 criteria, and analysis procedures required to produce data suitable for publication in a
@@ -10,6 +10,22 @@ peer-reviewed venue.
 
 All instructions are prescriptive. Deviations from the specified configuration must be documented
 in the experimental report along with a justification.
+
+**Core design constraints (non-negotiable):**
+
+1. **No TLS on any network leg.** All benchmark traffic runs as plaintext inside a trusted,
+   isolated network (dedicated benchmark VLAN or cloud VPC with no public routing). This is a
+   deliberate choice: many internal service-to-service architectures operate without TLS on
+   low-latency, trusted paths (e.g., within a single availability zone). Excluding TLS removes
+   handshake overhead and cipher-suite CPU cost as confounding variables, keeping the comparison
+   focused purely on connection-pooling and proxy overhead. Any difference in results observed
+   when TLS is added is a separate measurement concern and is outside the scope of this study.
+
+2. **All scenarios use multiple client JVM processes.** A single-process benchmark does not model
+   the connection-fragmentation pattern of a real microservice deployment. Every scenario runs
+   **16 independent `bench` JVM processes** (8 on each of two identical load-generator machines,
+   LG-1 and LG-2), each
+   representing one microservice replica.
 
 ---
 
@@ -23,51 +39,48 @@ in the experimental report along with a justification.
 6. [OJP Configuration](#6-ojp-configuration)
 7. [Database Initialisation](#7-database-initialisation)
 8. [Environment Snapshot](#8-environment-snapshot)
-9. [Test Scenarios](#9-test-scenarios)
-   - [T1 — Baseline: Direct JDBC (HIKARI_DIRECT)](#t1--baseline-direct-jdbc-hikari_direct)
-   - [T2 — Disciplined Pooling (HIKARI_DISCIPLINED)](#t2--disciplined-pooling-hikari_disciplined)
-   - [T3 — PgBouncer Transaction Mode](#t3--pgbouncer-transaction-mode)
-   - [T4 — OJP Server-Side Pooling](#t4--ojp-server-side-pooling)
-   - [T5 — Capacity Sweep (All SUTs)](#t5--capacity-sweep-all-suts)
-   - [T6 — Overload and Recovery](#t6--overload-and-recovery)
-10. [Measurement Collection](#10-measurement-collection)
-11. [Expected Outcomes and Acceptance Criteria](#11-expected-outcomes-and-acceptance-criteria)
-12. [Analysis Procedure](#12-analysis-procedure)
-13. [Known Limitations](#13-known-limitations)
+9. [Little's Law: Capacity Analysis](#9-littles-law-capacity-analysis)
+10. [Test Scenarios](#10-test-scenarios)
+    - [SUT-A — Baseline: HikariCP Disciplined (16 clients)](#sut-a--baseline-hikaricp-disciplined-16-clients)
+    - [SUT-B — OJP (3 nodes, 16 clients)](#sut-b--ojp-3-nodes-16-clients)
+    - [SUT-C — PgBouncer (3 nodes + HAProxy, 16 clients)](#sut-c--pgbouncer-3-nodes--haproxy-16-clients)
+    - [Test A — Capacity Sweep](#test-a--capacity-sweep-all-suts)
+    - [Test B — Overload and Recovery](#test-b--overload-and-recovery-all-suts)
+11. [Measurement Collection](#11-measurement-collection)
+12. [Expected Outcomes and Acceptance Criteria](#12-expected-outcomes-and-acceptance-criteria)
+13. [Analysis Procedure](#13-analysis-procedure)
+14. [Known Limitations](#14-known-limitations)
 
 ---
 
 ## 1. Test Environment Topology
 
-Both proxy-tier scenarios (T3 PgBouncer and T4 OJP) run three proxy instances, but they achieve
-load distribution differently:
+All three SUT scenarios share the same physical infrastructure. The **same two load-generator
+machines** (LG-1 and LG-2) run 16 independent `bench` JVM processes (8 per machine) in every
+scenario. Both machines are identical in role: they both run bench JVM processes issuing JDBC
+requests. The split exists purely to avoid CPU contention — 8 processes fit comfortably on an
+8-core machine. This is the key difference from a single-client design: 16 processes simulate
+16 microservice replicas, each maintaining its own connection pool or OJP virtual connections.
 
-- **T3 — PgBouncer**: PgBouncer has no built-in client-side load balancing. An external HAProxy
-  load balancer (LB) distributes JDBC connections across the three PgBouncer instances. The
-  full topology requires **six** machines: LG, LB, PROXY-1, PROXY-2, PROXY-3, and DB.
-- **T4 — OJP**: The OJP JDBC driver includes built-in client-side load balancing. A multi-host
-  JDBC URL lists all three OJP server addresses; the driver distributes connections without an
-  external load balancer. The topology requires **five** machines: LG, PROXY-1, PROXY-2,
-  PROXY-3, and DB.
+**No TLS is used on any network leg** in any scenario. All traffic is plaintext inside an isolated
+benchmark network. This keeps the comparison focused on connection-pooling and proxy overhead.
 
-The baseline scenarios (T1 and T2) require only LG, APP (T2 only), and DB.
+The topology differences between SUTs are on the **proxy tier**, not the client tier:
 
-**What is the APP machine?** APP is a second machine that runs extra instances of the same
-`$BENCH` tool from this repository — there is no separate application software involved. In T2
-(HIKARI_DISCIPLINED), 16 independent `$BENCH` JVM processes are needed to simulate 16
-microservice replicas. Running all 16 on one machine would saturate its CPU, so they are split:
-LG runs replicas 0–7 and APP runs replicas 8–15. In T1, T3, and T4 a single `$BENCH` replica
-on LG is sufficient; APP is idle and not needed.
+- **SUT-A (HikariCP Baseline)**: no proxy tier — each of the 16 client processes connects directly
+  to PostgreSQL (plaintext). Total backend connections = 16 × 19 ≈ 300.
+- **SUT-B (OJP)**: no external load balancer — the OJP JDBC driver performs client-side load
+  balancing across three OJP servers using a multi-host URL. All traffic is plaintext.
+- **SUT-C (PgBouncer)**: an HAProxy load balancer distributes connections from the 16 client
+  processes across three PgBouncer instances. All traffic is plaintext.
 
-No machine plays more than one role. Internet access is not required and must be disabled on all
-machines during the test run to eliminate background noise.
-
-### T3 — PgBouncer Topology (HAProxy Load Balancer)
+### SUT-C — PgBouncer Topology (HAProxy Load Balancer)
 
 ```mermaid
 graph TD
-    LG["Load Generator (LG)\nbench JVM"]
-    LB["Load Balancer (LB)\nHAProxy :6432"]
+    LG1["LG-1 — 8 × bench JVM replicas (0–7)"]
+    LG2["LG-2 — 8 × bench JVM replicas (8–15)"]
+    LB["LB — HAProxy :6432"]
 
     subgraph PROXY_TIER ["Proxy Tier — 3 × PgBouncer"]
         P1["PROXY-1\nPgBouncer :6432"]
@@ -77,7 +90,8 @@ graph TD
 
     DB[("PostgreSQL (DB)")]
 
-    LG -- "JDBC via HAProxy" --> LB
+    LG1 -- "JDBC via HAProxy" --> LB
+    LG2 -- "JDBC via HAProxy" --> LB
     LB -- "leastconn" --> P1
     LB -- "leastconn" --> P2
     LB -- "leastconn" --> P3
@@ -86,62 +100,63 @@ graph TD
     P3 --> DB
 ```
 
-### T4 — OJP Topology (Client-Side Load Balancing)
+### SUT-B — OJP Topology (Client-Side Load Balancing, gRPC/HTTP2)
 
 ```mermaid
 graph TD
-    LG["Load Generator (LG)\nOJP JDBC driver\nclient-side LB"]
+    LG1["LG-1 — 8 × bench JVM replicas (0–7)\nOJP JDBC driver (client-side LB)"]
+    LG2["LG-2 — 8 × bench JVM replicas (8–15)\nOJP JDBC driver (client-side LB)"]
 
-    subgraph PROXY_TIER ["Proxy Tier — 3 × OJP Server"]
-        P1["PROXY-1\nojp-server :5432"]
-        P2["PROXY-2\nojp-server :5432"]
-        P3["PROXY-3\nojp-server :5432"]
+    subgraph PROXY_TIER ["Proxy Tier — 3 × OJP Server (gRPC/HTTP2)"]
+        P1["PROXY-1\nOJP :1059 (gRPC)"]
+        P2["PROXY-2\nOJP :1059 (gRPC)"]
+        P3["PROXY-3\nOJP :1059 (gRPC)"]
     end
 
     DB[("PostgreSQL (DB)")]
 
-    LG -- "each connection routed\nby driver to one instance" --> P1
-    LG -. "driver selects\nper connection" .-> P2
-    LG -. "driver selects\nper connection" .-> P3
+    LG1 -- "gRPC/HTTP2" --> P1
+    LG1 -. "driver selects per connection" .-> P2
+    LG1 -. "driver selects per connection" .-> P3
+    LG2 -- "gRPC/HTTP2" --> P1
+    LG2 -. "driver selects per connection" .-> P2
+    LG2 -. "driver selects per connection" .-> P3
     P1 --> DB
     P2 --> DB
     P3 --> DB
 ```
 
-> **Note:** The arrows represent the pool of possible connection targets. The OJP JDBC driver
-> selects one OJP server instance per connection at connect time — not all instances simultaneously.
+> **Note on OJP port:** The OJP gRPC server listens on port **1059** by default (not 5432).
+> The OJP JDBC URL uses the format `jdbc:ojp[host:1059,...]_postgresql://dbhost:5432/db`.
+> See [install/OJP.md](install/OJP.md) for the exact driver URL syntax.
 
-### Baseline Topology (T1 — HIKARI_DIRECT, T2 — HIKARI_DISCIPLINED)
+### SUT-A — Baseline Topology (HikariCP Disciplined, 16 clients, no proxy)
 
 ```mermaid
 graph TD
-    LG["Load Generator (LG)\nbench JVM"]
-    APP["Application Tier (APP)\nbench JVM replicas (T2 only)"]
+    LG1["LG-1 — 8 × bench JVM replicas (0–7)\nHikariCP pool (19 conns each)"]
+    LG2["LG-2 — 8 × bench JVM replicas (8–15)\nHikariCP pool (19 conns each)"]
     DB[("PostgreSQL (DB)")]
 
-    LG -- "T1: single replica" --> DB
-    LG -- "T2: replicas 0–7" --> DB
-    APP -- "T2: replicas 8–15" --> DB
+    LG1 -- "direct JDBC (~19 conns each)" --> DB
+    LG2 -- "direct JDBC (~19 conns each)" --> DB
 ```
 
-**Machine roles:**
+**Machine roles — all scenarios:**
 
 | Label | Role | Scenarios |
 |-------|------|-----------|
-| LG    | Load generator — runs the bench JVM, issues all JDBC requests | All |
-| APP   | Second load generator — runs 8 additional bench JVM replicas alongside LG | T2 only |
-| LB    | HAProxy load balancer — distributes connections to 3 × PgBouncer | T3 only |
-| PROXY-1 | Connection proxy (instance 1) — runs PgBouncer or OJP | T3, T4 |
-| PROXY-2 | Connection proxy (instance 2) — runs PgBouncer or OJP | T3, T4 |
-| PROXY-3 | Connection proxy (instance 3) — runs PgBouncer or OJP | T3, T4 |
+| LG-1  | Load generator machine 1 — runs 8 bench JVM replicas (JVM 0–7); identical role to LG-2 | All |
+| LG-2  | Load generator machine 2 — runs 8 bench JVM replicas (JVM 8–15); identical role to LG-1 | All |
+| LB    | HAProxy load balancer — distributes connections to 3 × PgBouncer | SUT-C only |
+| PROXY-1 | Connection proxy (instance 1) — runs PgBouncer or OJP | SUT-B, SUT-C |
+| PROXY-2 | Connection proxy (instance 2) — runs PgBouncer or OJP | SUT-B, SUT-C |
+| PROXY-3 | Connection proxy (instance 3) — runs PgBouncer or OJP | SUT-B, SUT-C |
 | DB    | Database server — runs PostgreSQL | All |
 
 Each of the three proxy instances maintains an independent backend connection pool of 100
-connections, giving a total of 300 backend connections to PostgreSQL across the proxy tier.
-
-For T1, T3, and T4 the benchmark runs as a single replica on LG; APP is idle and not required.
-APP is only needed in T2, where 16 replicas are split between LG (replicas 0–7) and APP
-(replicas 8–15) to stay within each machine's CPU and memory envelope.
+connections, giving a total of 300 backend connections to PostgreSQL across the proxy tier — equal
+to the aggregate pool held by the 16 direct clients in SUT-A (16 × ≈19 ≈ 304 ≈ 300).
 
 ---
 
@@ -150,25 +165,34 @@ APP is only needed in T2, where 16 replicas are split between LG (replicas 0–7
 The following specifications define the **minimum** hardware to be used for a study intended for
 publication. Using lower specifications is acceptable only if every SUT runs on identical hardware.
 
-### 2.1 Load Generator (LG)
+**Ideal client configuration:** 16 bench JVM processes, 8 per machine (LG-1 and LG-2), each
+representing one microservice replica. Both machines are identical in role — "LG-1" and "LG-2"
+simply distinguish the two physical hosts. 8 processes fit on an 8-core machine without CPU
+contention; splitting across two identical machines also ensures the client tier is not the
+bottleneck. LG-1 and LG-2 are both required for **all scenarios** (SUT-A, SUT-B, SUT-C).
+
+### 2.1 Load Generator (LG-1 and LG-2)
 
 | Component | Specification |
 |-----------|---------------|
 | CPU | 8 physical cores, ≥3.0 GHz base clock (e.g., Intel Xeon E-2288G or AMD EPYC 7302P) |
 | RAM | 32 GB ECC DDR4-2666 |
 | Network | 10 GbE NIC (single port, direct-attached to switch) |
-| Storage | Any (not performance-critical for LG) |
+| Storage | Any (not performance-critical for LG-1/LG-2) |
 | OS | Ubuntu 22.04 LTS, kernel 5.15 or later |
 | JVM | OpenJDK 21.0.x, G1GC, `-Xms4g -Xmx8g -XX:+UseG1GC` |
 
-### 2.2 Application Tier (APP)
+Both LG-1 and LG-2 use this identical specification. LG-1 runs bench JVM replicas (JVM 0–7) and
+LG-2 runs bench JVM replicas (JVM 8–15). Each replica uses approximately 500 MB heap,
+so 8 replicas total ≈ 4 GB heap, well within the 8 GB `-Xmx` limit. CPU utilisation at
+1,000 RPS aggregate (≈ 63 RPS per replica) is expected to be 1–2 cores per replica peak,
+leaving headroom on an 8-core machine.
 
-Same specification as LG. Used for multi-replica runs where 8–16 JVM replicas are distributed
-across LG and APP.
+### 2.2 Proxy Tier (PROXY-1, PROXY-2, PROXY-3)
 
-### 2.3 Proxy Tier (PROXY-1, PROXY-2, PROXY-3)
-
-Three identical machines. The same software (PgBouncer or OJP) is deployed on each.
+Three identical machines. The same machines are reused for both SUT-B (OJP) and SUT-C
+(PgBouncer) — stop one service and start the other between scenario runs to control for
+hardware variation.
 
 | Component | Specification |
 |-----------|---------------|
@@ -180,15 +204,12 @@ Three identical machines. The same software (PgBouncer or OJP) is deployed on ea
 
 PgBouncer is single-threaded; a single core at 3 GHz can sustain approximately 50,000 simple
 transactions per second. The 8-core specification allows headroom for the OS and network interrupt
-handlers.
+handling. OJP is multi-threaded (Netty event loops) and benefits from additional cores.
 
-OJP resource requirements depend on the implementation; allocate the same hardware as for
-PgBouncer unless OJP documentation specifies otherwise.
+### 2.3 Load Balancer (LB) — SUT-C only
 
-### 2.4 Load Balancer (LB) — T3 only
-
-The load balancer is **only required for the T3 (PgBouncer) scenario**. OJP (T4) performs
-client-side load balancing via the OJP JDBC driver; no dedicated LB machine is needed for T4.
+The load balancer is **only required for SUT-C (PgBouncer)**. OJP (SUT-B) performs
+client-side load balancing via the OJP JDBC driver; no dedicated LB machine is needed for SUT-B.
 
 | Component | Specification |
 |-----------|---------------|
@@ -199,10 +220,9 @@ client-side load balancing via the OJP JDBC driver; no dedicated LB machine is n
 | OS | Ubuntu 22.04 LTS, kernel 5.15 or later |
 | Software | HAProxy 2.8 or later |
 
-HAProxy in TCP mode adds less than 0.05 ms round-trip overhead on a 10 GbE LAN at the load levels
-used in this benchmark.
+HAProxy in TCP mode adds less than 0.05 ms round-trip overhead on a 10 GbE LAN.
 
-### 2.5 Database Server (DB)
+### 2.4 Database Server (DB)
 
 | Component | Specification |
 |-----------|---------------|
@@ -213,8 +233,8 @@ used in this benchmark.
 | Network | 10 GbE NIC |
 | OS | Ubuntu 22.04 LTS, kernel 5.15 or later |
 
-**Rationale for 128 GB RAM:** The large dataset used in this benchmark (see Section 7) is
-approximately 60–80 GB. Allocating 64 GB to `shared_buffers` ensures that steady-state queries
+**Rationale for 128 GB RAM:** The large dataset used in this benchmark (see Section 8) is
+approximately 22 GB. Allocating 64 GB to `shared_buffers` ensures that steady-state queries
 execute entirely from cache, isolating the connection-pooling layer from disk I/O variability.
 Researchers who intentionally wish to measure I/O-bound behaviour should reduce `shared_buffers`
 to 8 GB and document this deviation.
@@ -232,7 +252,7 @@ to 8 GB and document this deviation.
 > **Prerequisites:** [Java 11+](install/JAVA.md) must be installed. Gradle is downloaded
 > automatically by the `./gradlew` wrapper — see [install/GRADLE.md](install/GRADLE.md).
 
-On LG (and APP if used for multi-replica tests):
+On LG-1 and LG-2 (run the same commands on both machines):
 
 ```bash
 git clone https://github.com/rrobetti/ojp-performance-tester-tool.git
@@ -372,14 +392,18 @@ effective_io_concurrency  = 256
 
 ### 4.3 pg_hba.conf
 
-Allow password authentication from all load-generator and proxy machines:
+Allow password authentication from all load-generator and proxy machines (plaintext connections
+are used — `host`, not `hostssl`):
 
 ```
-host  benchdb  benchuser  <LG_IP>/32      scram-sha-256
-host  benchdb  benchuser  <APP_IP>/32     scram-sha-256
-host  benchdb  benchuser  <PROXY1_IP>/32  scram-sha-256
-host  benchdb  benchuser  <PROXY2_IP>/32  scram-sha-256
-host  benchdb  benchuser  <PROXY3_IP>/32  scram-sha-256
+# TYPE  DATABASE  USER       ADDRESS          METHOD
+host    benchdb   benchuser  <LG1_IP>/32      scram-sha-256
+host    benchdb   benchuser  <LG2_IP>/32      scram-sha-256
+host    benchdb   benchuser  <PROXY1_IP>/32   scram-sha-256
+host    benchdb   benchuser  <PROXY2_IP>/32   scram-sha-256
+host    benchdb   benchuser  <PROXY3_IP>/32   scram-sha-256
+# Allow superuser access from localhost for maintenance
+local   all       postgres                    peer
 ```
 
 ### 4.4 Restart and Verify
@@ -395,9 +419,9 @@ psql -U benchuser -d benchdb -c "SELECT version();"
 ## 5. PgBouncer Configuration
 
 The following configuration is applied identically to PROXY-1, PROXY-2, and PROXY-3. Each
-instance connects directly to the PostgreSQL server and maintains an independent backend pool of
-100 connections. The aggregate backend-connection count across the three instances is 300, which
-matches `max_connections - 100` reserved on the DB server.
+instance connects directly to the PostgreSQL server (plaintext) and maintains an independent
+backend pool of 100 connections. The aggregate backend-connection count across the three instances
+is 300, which matches `max_connections - 100` reserved on the DB server.
 
 ### 5.1 /etc/pgbouncer/pgbouncer.ini (apply on each of PROXY-1, PROXY-2, PROXY-3)
 
@@ -451,7 +475,7 @@ sudo systemctl start pgbouncer
 sudo systemctl enable pgbouncer
 ```
 
-Verify each instance from LG:
+Verify each instance from LG-1:
 ```bash
 psql -h <PROXY1_IP> -p 6432 -U benchuser -d benchdb -c "SELECT 1;"
 psql -h <PROXY2_IP> -p 6432 -U benchuser -d benchdb -c "SELECT 1;"
@@ -470,35 +494,38 @@ psql -h <LB_IP> -p 6432 -U benchuser -d benchdb -c "SELECT 1;"
 
 The OJP JDBC driver implements **client-side load balancing**. A multi-host JDBC URL lists all
 three OJP server addresses; the driver distributes new connections across the instances without
-requiring an external load balancer. No HAProxy or LB machine is needed for the T4 scenario.
+requiring an external load balancer. No HAProxy or LB machine is needed for the SUT-B scenario.
 
 The following configuration is applied identically to PROXY-1, PROXY-2, and PROXY-3. Each OJP
-instance connects directly to the PostgreSQL server and maintains an independent backend pool of
-100 connections. The aggregate backend-connection count across the three instances is 300.
+instance connects directly to the PostgreSQL server (plaintext) and maintains an independent
+backend pool of 100 connections. The aggregate backend-connection count across the three instances
+is 300.
 
-Follow the OJP deployment documentation on each proxy machine. Each OJP instance must:
+### 6.1 OJP Server Startup (each of PROXY-1, PROXY-2, PROXY-3)
 
-- Accept connections on `<PROXYn_IP>:5432`
-- Proxy to `<DB_IP>:5432`, database `benchdb`, user `benchuser`
+Follow the OJP project installation instructions on each of PROXY-1, PROXY-2, and PROXY-3.
+Each OJP instance must:
+
+- Accept **gRPC** connections (plaintext) on `<PROXYn_IP>:1059` (OJP default gRPC port)
+- Proxy to `<DB_IP>:5432` (plaintext), database `benchdb`, user `benchuser`
 - Be configured with a maximum backend connection count of 100
 
-Verify each instance from LG:
+Verify each instance from LG-1 using the OJP JDBC driver:
 
 ```bash
-psql -h <PROXY1_IP> -p 5432 -U benchuser -d benchdb -c "SELECT 1;"
-psql -h <PROXY2_IP> -p 5432 -U benchuser -d benchdb -c "SELECT 1;"
-psql -h <PROXY3_IP> -p 5432 -U benchuser -d benchdb -c "SELECT 1;"
+# Using the bench tool's built-in connectivity check
+$BENCH run --config examples/ta-ojp.yaml --dry-run
 ```
 
-The JDBC URL used by the benchmark (see Section 9, T4) lists all three hosts so the OJP driver
-distributes connections at the client side:
+The JDBC URL used by the benchmark lists all three hosts so the OJP driver distributes connections
+at the client side:
 
 ```
-jdbc:ojp://<PROXY1_IP>:5432,<PROXY2_IP>:5432,<PROXY3_IP>:5432/benchdb
+jdbc:ojp[<PROXY1_IP>:1059,<PROXY2_IP>:1059,<PROXY3_IP>:1059]_postgresql://<DB_IP>:5432/benchdb
 ```
 
-Consult the OJP JDBC driver documentation for the exact URL syntax and any driver-specific
-load-balancing configuration properties.
+Consult the OJP JDBC driver documentation at [install/OJP_JDBC_DRIVER.md](install/OJP_JDBC_DRIVER.md)
+for the exact URL syntax and driver properties.
 
 ---
 
@@ -550,12 +577,12 @@ psql -h <DB_IP> -U benchuser -d benchdb -c "ANALYZE;"
 
 Before any benchmark run, capture the full environment on every machine:
 
-**On LG:**
+**On LG-1 and LG-2** (run on both machines, adjusting the label):
 ```bash
 $BENCH env-snapshot \
   --output results/env/ \
-  --label LG \
-  --postgres-conf-path /dev/null   # Not applicable on LG
+  --label LG-1 \            # Use LG-2 on the second machine
+  --postgres-conf-path /dev/null   # Not applicable on load generator machines
 ```
 
 **On DB:**
@@ -585,134 +612,149 @@ pgbouncer --version >> results/env/proxy-versions.txt
 ojp-server --version >> results/env/proxy-versions.txt  # Adjust to actual OJP binary name
 ```
 
-Record the HAProxy version on LB (T3 only):
+Record the HAProxy version on LB (SUT-C only):
 ```bash
 haproxy -v >> results/env/lb-version.txt
 ```
 
 ---
 
-## 9. Test Scenarios
+## 9. Little's Law: Capacity Analysis
 
-### Quick Reference — All Test Scenarios
+Before running any test it is important to understand the theoretical maximum capacity of the
+system under test and to verify that the chosen load levels are meaningful. We use **Little's Law**
+to do this.
 
-| # | Name | What runs | Machines needed | Load | What you measure |
-|---|------|-----------|-----------------|------|-----------------|
-| T1 | Direct JDBC baseline | Single bench JVM replica; HikariCP pool → PostgreSQL directly | LG, DB | 1,000 RPS | Latency/throughput with no proxy — the upper-bound baseline |
-| T2 | Disciplined pooling | 16 independent $BENCH JVM processes (8 on LG, 8 on APP), each simulating one microservice replica; 300-connection budget split equally (~20 per replica) | LG, APP, DB | 1,000 RPS aggregate | Whether splitting the pool budget across 16 replicas (as production microservices do) costs anything vs. T1's single large pool |
-| T3 | PgBouncer (3 instances) | Single bench JVM; JDBC → HAProxy → 3 × PgBouncer → PostgreSQL | LG, LB, PROXY-1–3, DB | 1,000 RPS | Proxy overhead of PgBouncer transaction-mode pooling |
-| T4 | OJP (3 instances) | Single bench JVM; OJP JDBC driver routes connections to 3 × OJP server → PostgreSQL | LG, PROXY-1–3, DB | 1,000 RPS | Proxy overhead of OJP server-side pooling with client-side LB |
-| T5 | Capacity sweep | Same setup as T1, T3, T4 (run each separately) | Same as T1/T3/T4 | 200 RPS → max (15 % steps) | Maximum sustainable throughput (MST) for each SUT |
-| T6 | Overload and recovery | Same setup as T1, T3, T4 (run each separately) | Same as T1/T3/T4 | 130 % MST for 300 s, then 70 % MST for 600 s | How quickly each SUT recovers after a sustained overload episode |
+### Little's Law Formula
 
-> **T5 depends on T1/T3/T4 first:** Run T1, T3, and T4 at the fixed 1,000 RPS target before the
-> sweep to confirm the system is healthy at that load level.
-> **T6 depends on T5:** You need the MST from T5 to compute the overload and recovery RPS levels.
+```
+L = λ × W
+```
+
+Where:
+- **L** = average number of requests in the system (connections actively executing a query)
+- **λ** = average throughput (transactions per second, TPS)
+- **W** = average time a request spends in the system (seconds per transaction)
+
+Rearranged to find maximum throughput:
+
+```
+λ_max = L_max / W_avg
+```
+
+### Parameters for This Benchmark
+
+| Parameter | Value | Rationale |
+|-----------|-------|-----------|
+| `L_max` (backend connections) | **300** | 3 proxy nodes × 100 connections each. Matches `max_connections = 400` with 100 reserved for superusers and maintenance. |
+| `W_avg` (mean query time, cache-warm W2_MIXED) | **~3–5 ms = 0.003–0.005 s** | W2_MIXED workload on a 16-core NVMe-backed DB with 64 GB `shared_buffers`; the working set (≈22 GB) fits entirely in cache, so disk I/O is negligible. Simple indexed reads/writes complete in 1–3 ms; multi-row transactions in 5–10 ms; weighted average ≈ 3–5 ms. |
+| `λ_max` (connection-limited) | **60,000–100,000 TPS** | L / W = 300 / 0.005 to 300 / 0.003 |
+| DB CPU limit (16 cores, conservative mixed workload) | **~15,000–30,000 TPS** | A 16-core DB at 100 % CPU handling W2_MIXED (index-heavy reads + writes) can process roughly 1,000–2,000 TPS per core; realistic sustained throughput ≈ 15,000–30,000 TPS. |
+
+### Bottleneck Identification
+
+The **DB CPU** saturates before the connection pool is exhausted:
+
+```
+λ_db_cpu ≈ 15,000–30,000 TPS  <<  λ_connections ≈ 60,000–100,000 TPS
+```
+
+**Decision: The bottleneck is DB CPU, not connections.** This means:
+
+1. The connection budget of 300 is more than sufficient for any load level we will test.
+2. The DB becomes the bottleneck at approximately 15,000–30,000 TPS (aggregate across all 16 clients).
+3. Our target load of **1,000 RPS** (≈ 1,000 TPS) is well below the DB CPU limit. This is
+   intentional — we want to measure proxy overhead, not DB saturation.
+
+### Why 1,000 RPS as the Starting Point?
+
+At 1,000 TPS and 4 ms average query time:
+
+```
+L_active = λ × W = 1,000 × 0.004 = 4 active connections out of 300 available
+```
+
+This means 4 connections are actively executing queries at any instant — the rest are idle.
+With such low utilisation, each proxy should easily keep pace, and latency differences between
+SUTs will reflect pure proxy overhead (protocol handling, queueing, multiplexing), not connection
+exhaustion. 1,000 RPS is therefore the **baseline comparison point**; the capacity sweep (Test A)
+finds each SUT's true maximum.
+
+### Maximum Sustainable Throughput Estimate
+
+For the capacity sweep, the DB CPU bottleneck predicts a maximum sustainable throughput of
+**10,000–20,000 TPS** before the SLO (p95 < 50 ms) is violated. The sweep will confirm this
+empirically. If the measured MST is substantially lower (< 5,000 TPS), investigate whether the
+proxy tier has become the bottleneck by checking proxy CPU and connection wait times.
+
+### Concurrency Budget per Client
+
+With 16 client JVM replicas and a 300-connection backend budget:
+
+```
+Connections per replica = 300 / 16 = 18.75 ≈ 19 connections
+Target RPS per replica  = 1,000 / 16 ≈ 63 RPS
+Active conns at 63 RPS, 4 ms avg = 63 × 0.004 ≈ 0.25 active connections per replica (at baseline)
+```
+
+Each replica's 19-connection pool provides massive headroom at the baseline load of 63 RPS. Under
+the capacity sweep, the per-replica load increases proportionally until the DB becomes the
+bottleneck or the proxy's queue depth exceeds the SLO.
+
+---
+
+## 10. Test Scenarios
 
 All test scenarios share the following global parameters unless explicitly overridden:
 
-| Parameter | Value |
-|-----------|-------|
-| `dbConnectionBudget` | 300 (100 per proxy instance × 3 instances) |
-| `warmupSeconds` | 300 |
-| `cooldownSeconds` | 120 |
-| `repeatCount` | 5 |
-| `seed` | 42 |
-| `useZipf` | false |
-| `metricsIntervalSeconds` | 1 |
-| `sloP95Ms` | 50 |
-| `errorRateThreshold` | 0.001 |
+| Parameter | Value | Rationale |
+|-----------|-------|-----------|
+| `clients` | 16 (8 on LG-1, 8 on LG-2) | Simulate 16 microservice replicas; realistic multi-tenant deployment |
+| `dbConnectionBudget` | 300 (100 per proxy × 3; or 19 × 16 ≈ 304 for direct) | Equal backend connection budget across all SUTs for fair comparison |
+| `targetRpsPerClient` | 63 | 16 × 63 ≈ 1,000 RPS aggregate baseline |
+| `warmupSeconds` | 300 | Primes PostgreSQL buffer pool and JIT compiler |
+| `durationSeconds` | 600 | Steady-state measurement window |
+| `cooldownSeconds` | 120 | Allows queues and connection states to drain |
+| `repeatCount` | 5 | Enables median p95 computation across runs |
+| `seed` | 42 | Reproducible parameter distribution |
+| `useZipf` | false | Uniform distribution (cache-warm scenario) |
+| `metricsIntervalSeconds` | 1 | Per-second timeseries resolution |
+| `sloP95Ms` | 50 | SLO threshold: 50 ms at p95 |
+| `errorRateThreshold` | 0.001 | Maximum tolerated error rate: 0.1 % |
+| TLS / SSL | **not used** | All legs are plaintext; TLS overhead is excluded as a variable |
 
 The `warmupSeconds: 300` warm-up phase primes PostgreSQL's buffer pool and the JIT compiler. The
 warm-up window is not included in any reported metric. The `repeatCount: 5` repetitions at each
 configuration point allow the median p95 to be computed, reducing the influence of a single
 anomalous run.
 
-### T1 — Baseline: Direct JDBC (HIKARI_DIRECT)
-
-**Purpose:** Establish the performance of direct JDBC connection pooling without any proxy.
-This is the upper-bound baseline. To ensure a fair comparison with T3 and T4 (which collectively
-use 300 backend connections), the T1 pool size is also set to 300.
-
-**Connection path:** LG → DB (direct)
-
-**Configuration file:** `configs/t1-hikari-direct.yaml`
-
-```yaml
-database:
-  jdbcUrl: "jdbc:postgresql://<DB_IP>:5432/benchdb"
-  username: "benchuser"
-  password: "benchpass"
-
-connectionMode: HIKARI_DIRECT
-poolSize: 300   # matches total proxy backend connections in T3/T4 for a fair comparison
-dbConnectionBudget: 300
-replicas: 1
-
-workload:
-  type: W2_MIXED
-  openLoop: true
-  targetRps: 1000
-  warmupSeconds: 300
-  durationSeconds: 600
-  cooldownSeconds: 120
-  repeatCount: 5
-  writePercent: 0.20
-  useZipf: false
-  seed: 42
-
-numAccounts: 1000000
-numItems:    100000
-numOrders:   10000000
-
-metricsIntervalSeconds: 1
-outputDir: "results/t1-hikari-direct"
-sloP95Ms: 50
-errorRateThreshold: 0.001
-```
-
-**Run command:**
-```bash
-$BENCH run --config configs/t1-hikari-direct.yaml
-```
-
-**Metrics to record:** throughput (RPS), p50, p95, p99, p999 latency, error rate.
-
 ---
 
-### T2 — Disciplined Pooling (HIKARI_DISCIPLINED)
+### SUT-A — Baseline: HikariCP Disciplined (16 clients, direct)
 
-**Purpose:** Simulate a production deployment where a fixed total connection budget is divided
-equally across many independent microservice replicas. In real production systems, each
-microservice instance maintains its own HikariCP connection pool; no single instance holds all
-300 connections. T2 models this with 16 independent `$BENCH` JVM processes — each representing
-one microservice replica — where each replica receives `300 ÷ 16 ≈ 20` connections from the
-total budget.
+**Purpose:** Establish the upper-bound performance of direct JDBC connection pooling across 16
+independent microservice replicas, with no proxy. Each replica holds 19 HikariCP connections
+(300 ÷ 16 ≈ 19). All connections are plaintext.
 
-The hypothesis being tested is: *does this fragmented, "disciplined" pooling model deliver the
-same throughput and latency as T1's single large pool?* If it does, it confirms that pool
-fragmentation alone is not a bottleneck; any latency gap observed in T3/T4 is therefore
-attributable to the proxy layer itself.
+**Connection path:** 16 × `bench` replica (8 on LG-1, 8 on LG-2) → DB (direct, plaintext)
 
-**Connection path:** 16 × `$BENCH` replica (8 on LG, 8 on APP) → DB (direct, no proxy)
-
-**Configuration file:** `configs/t2-disciplined-16.yaml`
+**Configuration file:** `examples/ta-baseline-hikari.yaml`
 
 ```yaml
 database:
   jdbcUrl: "jdbc:postgresql://<DB_IP>:5432/benchdb"
   username: "benchuser"
-  password: "benchpass"
+  password: "${DB_PASSWORD}"
 
 connectionMode: HIKARI_DISCIPLINED
-dbConnectionBudget: 100
+dbConnectionBudget: 300
 replicas: 16
-maxPoolSizePerReplica: 20
+maxPoolSizePerReplica: 19
 
 workload:
   type: W2_MIXED
   openLoop: true
-  targetRps: 63    # Per-replica rate; 16 × 63 ≈ 1000 RPS aggregate
+  targetRps: 63    # Per-replica; 16 × 63 ≈ 1,000 RPS aggregate
   warmupSeconds: 300
   durationSeconds: 600
   cooldownSeconds: 120
@@ -726,58 +768,131 @@ numItems:    100000
 numOrders:   10000000
 
 metricsIntervalSeconds: 1
-outputDir: "results/t2-disciplined"
+outputDir: "results/sut-a-baseline"
 sloP95Ms: 50
 errorRateThreshold: 0.001
 ```
 
-**Run command (execute on each machine, stagger starts by ≤2 seconds):**
+**Run command (execute on both machines simultaneously, stagger starts by ≤2 seconds):**
 ```bash
-# On LG (replicas 0–7)
+# On LG-1 (JVMs 0–7)
 for i in {0..7}; do
-  $BENCH run --config configs/t2-disciplined-16.yaml --instance-id $i \
-    --output results/t2-disciplined/ &
+  $BENCH run --config examples/ta-baseline-hikari.yaml --instance-id $i \
+    --output results/sut-a-baseline/ &
 done
 
-# On APP (replicas 8–15) — execute in parallel with the LG command above
+# On LG-2 (JVMs 8–15) — execute in parallel with the LG-1 command above
 for i in {8..15}; do
-  $BENCH run --config configs/t2-disciplined-16.yaml --instance-id $i \
-    --output results/t2-disciplined/ &
+  $BENCH run --config examples/ta-baseline-hikari.yaml --instance-id $i \
+    --output results/sut-a-baseline/ &
 done
 
 wait
 ```
 
-**Note:** The aggregate throughput target is 16 × 63 = 1,008 RPS. After the run, sum
-`achievedThroughputRps` across all 16 `summary.json` files to obtain the aggregate throughput.
+**Metrics to record:** per-replica and aggregate throughput (RPS), p50, p95, p99, p999 latency,
+error rate. Aggregate: sum `achievedThroughputRps` across all 16 `summary.json` files.
 
 ---
 
-### T3 — PgBouncer Transaction Mode (3 Instances)
+### SUT-B — OJP (3 nodes, 16 clients, gRPC)
 
-**Purpose:** Measure the throughput and latency of a JDBC workload routed through three PgBouncer
-instances in transaction pooling mode. Each instance holds 100 backend connections; total backend
-connections to PostgreSQL = 300. Client connections are distributed across the three instances by
-HAProxy using the least-connections algorithm.
+**Purpose:** Measure the throughput and latency of 16 microservice replicas routing queries
+through three OJP nodes via gRPC over HTTP/2 (plaintext). Each OJP node maintains 100 backend
+connections (300 total). The OJP JDBC driver performs client-side load balancing — no external
+load balancer is required.
 
-**Connection path:** LG → LB (HAProxy:6432) → PROXY-{1,2,3} (PgBouncer:6432) → DB
+**Connection path:** 16 × `bench` replica → OJP JDBC driver (client-side LB, gRPC) →
+PROXY-{1,2,3} (OJP:1059) → DB (plaintext)
 
-**Configuration file:** `configs/t3-pgbouncer.yaml`
+**Configuration file:** `examples/ta-ojp.yaml`
+
+```yaml
+database:
+  # Multi-host OJP JDBC URL — driver distributes virtual connections across all 3 OJP nodes
+  jdbcUrl: "jdbc:ojp[<PROXY1_IP>:1059,<PROXY2_IP>:1059,<PROXY3_IP>:1059]_postgresql://<DB_IP>:5432/benchdb"
+  username: "benchuser"
+  password: "${DB_PASSWORD}"
+
+connectionMode: OJP
+dbConnectionBudget: 19   # Per-replica virtual connection budget (300 / 16 ≈ 19)
+replicas: 16
+
+ojp:
+  virtualConnectionMode: PER_WORKER
+  poolSharing: PER_INSTANCE
+  minConnections: 3
+  connectionTimeoutMs: 30000
+  idleTimeoutMs: 600000
+  maxLifetimeMs: 1800000
+  queueLimit: 200
+
+workload:
+  type: W2_MIXED
+  openLoop: true
+  targetRps: 63    # Per-replica; 16 × 63 ≈ 1,000 RPS aggregate
+  warmupSeconds: 300
+  durationSeconds: 600
+  cooldownSeconds: 120
+  repeatCount: 5
+  writePercent: 0.20
+  useZipf: false
+  seed: 42
+
+numAccounts: 1000000
+numItems:    100000
+numOrders:   10000000
+
+metricsIntervalSeconds: 1
+outputDir: "results/sut-b-ojp"
+sloP95Ms: 50
+errorRateThreshold: 0.001
+```
+
+**Run command (execute on both machines simultaneously):**
+```bash
+# On LG-1 (JVMs 0–7)
+for i in {0..7}; do
+  $BENCH run --config examples/ta-ojp.yaml --instance-id $i \
+    --output results/sut-b-ojp/ &
+done
+
+# On LG-2 (JVMs 8–15) — execute in parallel
+for i in {8..15}; do
+  $BENCH run --config examples/ta-ojp.yaml --instance-id $i \
+    --output results/sut-b-ojp/ &
+done
+
+wait
+```
+
+---
+
+### SUT-C — PgBouncer (3 nodes + HAProxy, 16 clients)
+
+**Purpose:** Measure the throughput and latency of 16 microservice replicas routing queries
+through an HAProxy load balancer to three PgBouncer instances in transaction pooling mode.
+Each PgBouncer node maintains 100 backend connections (300 total). All traffic is plaintext.
+
+**Connection path:** 16 × `bench` replica → LB (HAProxy:6432) →
+PROXY-{1,2,3} (PgBouncer:6432) → DB (plaintext)
+
+**Configuration file:** `examples/ta-pgbouncer.yaml`
 
 ```yaml
 database:
   # Point to HAProxy load balancer, not directly to a PgBouncer instance
   jdbcUrl: "jdbc:postgresql://<LB_IP>:6432/benchdb"
   username: "benchuser"
-  password: "benchpass"
+  password: "${DB_PASSWORD}"
 
 connectionMode: PGBOUNCER
-poolSize: 2    # Minimal client-side connections; PgBouncer holds the real pool
+poolSize: 2    # Minimal client-side pool; PgBouncer holds the real backend pool
 
 workload:
   type: W2_MIXED
   openLoop: true
-  targetRps: 1000
+  targetRps: 63    # Per-replica; 16 × 63 ≈ 1,000 RPS aggregate
   warmupSeconds: 300
   durationSeconds: 600
   cooldownSeconds: 120
@@ -791,199 +906,150 @@ numItems:    100000
 numOrders:   10000000
 
 metricsIntervalSeconds: 1
-outputDir: "results/t3-pgbouncer"
+outputDir: "results/sut-c-pgbouncer"
 sloP95Ms: 50
 errorRateThreshold: 0.001
 ```
 
-**Run command:**
+**Run command (execute on both machines simultaneously):**
 ```bash
-$BENCH run --config configs/t3-pgbouncer.yaml
+# On LG-1 (JVMs 0–7)
+for i in {0..7}; do
+  $BENCH run --config examples/ta-pgbouncer.yaml --instance-id $i \
+    --output results/sut-c-pgbouncer/ &
+done
+
+# On LG-2 (JVMs 8–15) — execute in parallel
+for i in {8..15}; do
+  $BENCH run --config examples/ta-pgbouncer.yaml --instance-id $i \
+    --output results/sut-c-pgbouncer/ &
+done
+
+wait
 ```
 
 **PgBouncer monitoring during the test (run on each PROXY machine in a separate terminal):**
 ```bash
-# Run this command on PROXY-1, PROXY-2, and PROXY-3 simultaneously
 watch -n 5 "psql -p 6432 -U benchuser pgbouncer -c 'SHOW POOLS;' && \
             psql -p 6432 -U benchuser pgbouncer -c 'SHOW STATS;'"
 ```
 
 Record `cl_active`, `cl_waiting`, `sv_active`, `sv_idle` from `SHOW POOLS` on each instance at
-least every 60 seconds during the steady-state window. Sum `cl_active` and `sv_active` across all
-three instances to obtain aggregate values.
+least every 60 seconds during the steady-state window.
 
 ---
 
-### T4 — OJP Server-Side Pooling (3 Instances, Client-Side LB)
-
-**Purpose:** Measure the throughput and latency of a JDBC workload using three OJP instances with
-no client-side HikariCP pool. Each OJP instance maintains a backend pool of 100 connections; total
-backend connections to PostgreSQL = 300. Load distribution is handled by the OJP JDBC driver
-via a multi-host JDBC URL — no external load balancer is required.
-
-**Connection path:** LG → OJP JDBC driver (client-side LB) → PROXY-{1,2,3} (OJP:5432) → DB
-
-**Configuration file:** `configs/t4-ojp.yaml`
-
-```yaml
-database:
-  # Multi-host OJP JDBC URL — the driver distributes connections across all three OJP instances
-  jdbcUrl: "jdbc:ojp://<PROXY1_IP>:5432,<PROXY2_IP>:5432,<PROXY3_IP>:5432/benchdb"
-  username: "benchuser"
-  password: "benchpass"
-
-connectionMode: OJP
-dbConnectionBudget: 100   # Client-side connection budget for the bench load generator (1 replica)
-replicas: 1
-
-ojp:
-  virtualConnectionMode: PER_WORKER
-  poolSharing: PER_INSTANCE
-  minConnections: 5
-  connectionTimeoutMs: 30000
-  idleTimeoutMs: 600000
-  maxLifetimeMs: 1800000
-  queueLimit: 1000
-
-workload:
-  type: W2_MIXED
-  openLoop: true
-  targetRps: 1000
-  warmupSeconds: 300
-  durationSeconds: 600
-  cooldownSeconds: 120
-  repeatCount: 5
-  writePercent: 0.20
-  useZipf: false
-  seed: 42
-
-numAccounts: 1000000
-numItems:    100000
-numOrders:   10000000
-
-metricsIntervalSeconds: 1
-outputDir: "results/t4-ojp"
-sloP95Ms: 50
-errorRateThreshold: 0.001
-```
-
-**Run command:**
-```bash
-$BENCH run --config configs/t4-ojp.yaml
-```
-
----
-
-### T5 — Capacity Sweep (All SUTs)
+### Test A — Capacity Sweep (All SUTs)
 
 **Purpose:** Determine the maximum sustainable throughput (MST) for each SUT, defined as the
-highest load level at which median p95 latency across all five repetitions remains below the SLO
-threshold (50 ms) and the error rate remains below 0.1%.
+highest per-client RPS level at which median p95 latency across all five repetitions remains
+below the SLO threshold (50 ms) and the error rate remains below 0.1 %.
 
-The sweep starts at 20% of the initial `targetRps` value and increments by 15% at each step until
-two consecutive steps violate the SLO.
+The sweep starts at 200 RPS aggregate (≈ 13 RPS per client) and increments by 15 % at each step
+until two consecutive steps violate the SLO. This test uses the same 16-client setup as the SUT
+sections above.
 
 **Run the sweep for each SUT:**
 
 ```bash
-# T1 baseline
-$BENCH sweep --config configs/t1-hikari-direct.yaml \
-  --sweep-start-rps 200 \
-  --sweep-increment-percent 15 \
-  --output results/sweep-t1/
+# SUT-A: HikariCP baseline sweep
+# On LG-1 (JVMs 0–7) and LG-2 (JVMs 8–15) simultaneously:
+for i in {0..7}; do
+  $BENCH sweep --config examples/ta-baseline-hikari.yaml --instance-id $i \
+    --sweep-start-rps 13 --sweep-increment-percent 15 \
+    --output results/sweep-sut-a/ &
+done
+# (mirror on LG-2 with instance IDs 8–15)
+wait
 
-# T3 PgBouncer
-$BENCH sweep --config configs/t3-pgbouncer.yaml \
-  --sweep-start-rps 200 \
-  --sweep-increment-percent 15 \
-  --output results/sweep-t3/
+# SUT-B: OJP sweep (same pattern)
+for i in {0..7}; do
+  $BENCH sweep --config examples/ta-ojp.yaml --instance-id $i \
+    --sweep-start-rps 13 --sweep-increment-percent 15 \
+    --output results/sweep-sut-b/ &
+done
+# (mirror on LG-2 with instance IDs 8–15)
+wait
 
-# T4 OJP
-$BENCH sweep --config configs/t4-ojp.yaml \
-  --sweep-start-rps 200 \
-  --sweep-increment-percent 15 \
-  --output results/sweep-t4/
+# SUT-C: PgBouncer sweep (same pattern)
+for i in {0..7}; do
+  $BENCH sweep --config examples/ta-pgbouncer.yaml --instance-id $i \
+    --sweep-start-rps 13 --sweep-increment-percent 15 \
+    --output results/sweep-sut-c/ &
+done
+# (mirror on LG-2 with instance IDs 8–15)
+wait
 ```
 
-**Expected output per sweep:** a `sweep-summary.json` file containing the load level at each step,
-the median p95 latency, and whether the SLO was violated.
-
-**Reporting:** For each SUT, report the MST as the highest load level that did not violate the SLO
-at the preceding step. Pair the MST with the median p95 latency at that level.
+**Reporting:** For each SUT, report the MST as the highest load level where the SLO was not
+violated. Aggregate per-client RPS to report the system-level MST. Pair MST with median p95.
 
 ---
 
-### T6 — Overload and Recovery
+### Test B — Overload and Recovery (All SUTs)
 
 **Purpose:** Measure the time required for p95 latency to return to SLO-compliant levels after a
-sustained overload episode. This test is the primary differentiator between SUTs with respect to
-queue management and backpressure behaviour.
+sustained overload episode. This is the primary differentiator between SUTs with respect to queue
+management and backpressure behaviour.
 
 **Protocol:**
 
-1. From T5, identify the MST for each SUT (call it R_max RPS).
-2. For this test, set:
-   - Overload level: 1.30 × R_max RPS (130% of MST)
-   - Recovery level: 0.70 × R_max RPS (70% of MST)
-3. The test consists of three phases within a single continuous run:
-   - **Warm-up**: 300 s at 0.70 × R_max (system reaches stable state)
-   - **Overload**: 300 s at 1.30 × R_max (system is stressed)
-   - **Recovery**: 600 s at 0.70 × R_max (system returns to steady state)
+1. From Test A, identify the MST per-client RPS for each SUT (call it `R_client_max`).
+2. Set overload level = 1.30 × `R_client_max` and recovery level = 0.70 × `R_client_max`.
+3. Three consecutive phases in a single continuous run:
+   - **Warm-up** (300 s): load at 0.70 × `R_client_max` — system reaches steady state
+   - **Overload** (300 s): load at 1.30 × `R_client_max` — system is stressed
+   - **Recovery** (600 s): load drops back to 0.70 × `R_client_max` — measure time to recover
 
-**Metric of interest — Recovery Time:** The number of seconds from the moment load drops to
-0.70 × R_max until the first second S such that:
-- p95 latency in second S is below the SLO threshold (50 ms), AND
-- p95 latency in every subsequent second from S to the end of the recovery window is also below the
-  SLO threshold.
-
-If p95 latency never returns below the SLO threshold within the 600-second recovery window, the
-recovery time is recorded as >600 s.
+**Metric of interest — Recovery Time:** The number of seconds from the moment load drops until
+the first second S such that p95 < SLO and every subsequent second in the recovery window also
+satisfies the SLO. If p95 never recovers within 600 s, record recovery time as > 600 s.
 
 **Run the overload test for each SUT:**
 
 ```bash
-# Substitute <R_MAX_T1>, <R_MAX_T3>, <R_MAX_T4> with the values found in T5.
+# SUT-A baseline — on LG-1 (JVMs 0–7) and LG-2 (JVMs 8–15) simultaneously:
+for i in {0..7}; do
+  $BENCH overload --config examples/ta-baseline-hikari.yaml --instance-id $i \
+    --overload-rps <1.30 * R_CLIENT_MAX_A>  \
+    --recovery-rps <0.70 * R_CLIENT_MAX_A>  \
+    --overload-seconds 300 --recovery-seconds 600 \
+    --output results/tb-overload-sut-a/ &
+done
+# (mirror on LG-2)
+wait
 
-# T1 baseline
-$BENCH overload \
-  --config configs/t1-hikari-direct.yaml \
-  --overload-rps <1.30 * R_MAX_T1>  \
-  --recovery-rps <0.70 * R_MAX_T1>  \
-  --overload-seconds 300             \
-  --recovery-seconds 600             \
-  --output results/t6-overload-t1/
+# SUT-B OJP
+for i in {0..7}; do
+  $BENCH overload --config examples/ta-ojp.yaml --instance-id $i \
+    --overload-rps <1.30 * R_CLIENT_MAX_B>  \
+    --recovery-rps <0.70 * R_CLIENT_MAX_B>  \
+    --overload-seconds 300 --recovery-seconds 600 \
+    --output results/tb-overload-sut-b/ &
+done
+# (mirror on LG-2)
+wait
 
-# T3 PgBouncer
-$BENCH overload \
-  --config configs/t3-pgbouncer.yaml \
-  --overload-rps <1.30 * R_MAX_T3>  \
-  --recovery-rps <0.70 * R_MAX_T3>  \
-  --overload-seconds 300             \
-  --recovery-seconds 600             \
-  --output results/t6-overload-t3/
-
-# T4 OJP
-$BENCH overload \
-  --config configs/t4-ojp.yaml       \
-  --overload-rps <1.30 * R_MAX_T4>  \
-  --recovery-rps <0.70 * R_MAX_T4>  \
-  --overload-seconds 300             \
-  --recovery-seconds 600             \
-  --output results/t6-overload-t4/
+# SUT-C PgBouncer
+for i in {0..7}; do
+  $BENCH overload --config examples/ta-pgbouncer.yaml --instance-id $i \
+    --overload-rps <1.30 * R_CLIENT_MAX_C>  \
+    --recovery-rps <0.70 * R_CLIENT_MAX_C>  \
+    --overload-seconds 300 --recovery-seconds 600 \
+    --output results/tb-overload-sut-c/ &
+done
+# (mirror on LG-2)
+wait
 ```
 
 **Computing recovery time from timeseries.csv:**
 
-The `timeseries.csv` file contains one row per second with columns including `wallTimeSeconds`,
-`p95Ms`, and `errorRate`. The recovery window starts at the second where `wallTimeSeconds` exceeds
-the end of the overload phase (300 + 300 = 600 s from steady-state start).
-
 ```python
 import pandas as pd
 
-df = pd.read_csv("results/t6-overload-t3/timeseries.csv")
+df = pd.read_csv("results/tb-overload-sut-c/timeseries.csv")
 
-recovery_start_s = 600   # seconds from steady-state start
+recovery_start_s = 600   # seconds from steady-state start (300 warmup + 300 overload)
 slo_p95_ms       = 50.0
 
 recovery = df[df["wallTimeSeconds"] >= recovery_start_s].reset_index(drop=True)
@@ -991,7 +1057,6 @@ recovery = df[df["wallTimeSeconds"] >= recovery_start_s].reset_index(drop=True)
 recovered_idx = None
 for i, row in recovery.iterrows():
     if row["p95Ms"] < slo_p95_ms:
-        # Check that all subsequent rows also satisfy SLO
         if (recovery.iloc[i:]["p95Ms"] < slo_p95_ms).all():
             recovered_idx = i
             break
@@ -1003,22 +1068,23 @@ else:
     print("Recovery time: >600 s (SLO not reached within recovery window)")
 ```
 
-**Additional metrics to extract from T6:**
+**Additional metrics:**
 
 | Metric | Definition |
 |--------|------------|
 | Overload peak p99 | Maximum p99 latency during the 300-second overload phase |
 | Overload error rate | Mean error rate during the overload phase |
-| Queue drain time | Time from load reduction until `cl_waiting = 0` in `SHOW POOLS` (PgBouncer) |
+| Queue drain time | Time from load reduction until `cl_waiting = 0` in `SHOW POOLS` (PgBouncer only) |
 | Recovery time | As defined above |
 
 ---
 
-## 10. Measurement Collection
+## 11. Measurement Collection
 
-### 10.1 Output Structure
+### 11.1 Output Structure
 
-Each `bench run` or `bench overload` command produces the following files in the output directory:
+Each `bench run`, `bench sweep`, or `bench overload` command produces the following files in the
+output directory:
 
 ```
 results/
@@ -1033,7 +1099,7 @@ results/
               latency.hdr       # HdrHistogram binary log
 ```
 
-### 10.2 Before Each Run
+### 11.2 Before Each Run
 
 Reset PostgreSQL statistics to ensure that `pg_stat_statements` data is not polluted by previous
 runs:
@@ -1045,7 +1111,7 @@ SELECT pg_stat_reset();
 EOF
 ```
 
-### 10.3 After Each Run
+### 11.3 After Each Run
 
 Collect PostgreSQL statistics:
 
@@ -1063,212 +1129,104 @@ EOF
 
 Save to `results/{scenario}/pg_stat_statements.csv`.
 
-### 10.4 Required Metrics for Publication
+### 11.4 Required Metrics for Publication
 
 The following metrics must be reported for each SUT and each scenario:
 
 | Metric | Source |
 |--------|--------|
-| Mean achieved throughput (RPS) | `summary.json → achievedThroughputRps` |
-| p50 latency (ms) | `summary.json → p50Ms` |
-| p95 latency (ms) | `summary.json → p95Ms` |
-| p99 latency (ms) | `summary.json → p99Ms` |
-| p999 latency (ms) | `summary.json → p999Ms` |
+| Mean achieved throughput (RPS) | `summary.json → achievedThroughputRps` (sum across 16 replicas) |
+| p50 latency (ms) | `summary.json → p50Ms` (median across 16 replicas) |
+| p95 latency (ms) | `summary.json → p95Ms` (median across 16 replicas) |
+| p99 latency (ms) | `summary.json → p99Ms` (median across 16 replicas) |
+| p999 latency (ms) | `summary.json → p999Ms` (median across 16 replicas) |
 | Maximum latency (ms) | `summary.json → maxMs` |
 | Error rate | `summary.json → errorRate` |
 | Error breakdown | `summary.json → errorsByType` |
 | Maximum sustainable throughput | `sweep-summary.json` |
-| Recovery time (T6 only) | Computed from `timeseries.csv` |
+| Recovery time (Test B only) | Computed from `timeseries.csv` |
 
 ---
 
-## 11. Expected Outcomes and Acceptance Criteria
+## 12. Expected Outcomes and Acceptance Criteria
 
 The following predictions are stated prior to running the experiments. Their confirmation or
-refutation is the scientific contribution of the study. These are not thresholds that determine
-whether results are "good enough" to publish; they are falsifiable hypotheses.
+refutation is the scientific contribution of the study.
 
-### 11.1 Steady-State Throughput (T1–T4)
+### 12.1 Steady-State Throughput at 1,000 RPS
 
-**Hypothesis H1:** At 1,000 RPS with a total backend connection budget of 300 (100 per proxy
-instance for T3/T4, or a single pool of 300 for T1):
+**Hypothesis H1:** At 1,000 RPS aggregate with 16 clients and a total backend connection budget
+of 300:
 
-| SUT | Predicted p95 relative to T1 | Predicted throughput relative to T1 |
-|-----|-------------------------------|--------------------------------------|
-| T1 HIKARI_DIRECT | baseline | baseline |
-| T2 HIKARI_DISCIPLINED (K=16) | +5 to +20% higher latency per replica | ≈ aggregate baseline |
-| T3 PGBOUNCER (3 instances + HAProxy) | +2 to +10% higher latency (LB hop + proxy) | ≈ baseline |
-| T4 OJP (3 instances, client-side LB) | +2 to +15% higher latency (proxy hop only) | ≈ baseline |
+| SUT | Predicted p95 relative to SUT-A | Predicted throughput |
+|-----|----------------------------------|----------------------|
+| SUT-A HikariCP Disciplined (baseline) | baseline | baseline |
+| SUT-B OJP (3 nodes, gRPC, client-side LB) | +2 to +15% higher latency (gRPC hop + proxy) | ≈ baseline |
+| SUT-C PgBouncer (3 nodes + HAProxy) | +2 to +10% higher latency (LB hop + proxy) | ≈ baseline |
 
-The proxy-hop overhead is expected to be 0.1–0.5 ms per request on a 10 GbE LAN, contributing
-less than 1 ms to median latency but potentially more to tail latency under load due to queueing
-at the proxy.
+The proxy-hop overhead is expected to be 0.1–0.5 ms per request on a 10 GbE LAN.
+Per-query overhead above the baseline is attributable to proxy protocol processing and queueing.
 
-### 11.2 Capacity (T5)
+### 12.2 Capacity (Test A)
 
-**Hypothesis H2:** The maximum sustainable throughput of T3 (3 × PgBouncer behind HAProxy) is
-within 10% of T1 (HIKARI_DIRECT) when the total backend connection count is held constant at 300.
-PgBouncer's transaction-mode multiplexing is designed precisely to avoid the connection
-serialisation that limits throughput; if connection establishment cost is low (cache-warm, no
-SSL), the overhead should be minimal.
+**Hypothesis H2:** The maximum sustainable throughput of SUT-C (3 × PgBouncer behind HAProxy) is
+within 10% of SUT-A (HikariCP Disciplined) when the total backend connection count is held
+constant at 300.
 
-**Hypothesis H3:** The maximum sustainable throughput of T4 (3 × OJP with client-side JDBC load
-balancing) is within 10% of T3 (3 × PgBouncer) when each proxy instance is configured with equal
-backend pool sizes (100 per instance). Both are transaction-mode multiplexers.
-T4 avoids the HAProxy network hop present in T3; any latency difference is attributable to
-implementation-specific proxy overheads (protocol handling, queue management, JVM overhead in OJP
-if applicable).
+**Hypothesis H3:** The maximum sustainable throughput of SUT-B (3 × OJP with client-side JDBC
+load balancing) is within 10% of SUT-C (3 × PgBouncer) when each proxy instance is configured
+with equal backend pool sizes (100 per instance). SUT-B avoids the HAProxy network hop present in
+SUT-C; any latency difference is attributable to implementation-specific proxy overheads.
 
-### 11.3 Overload and Recovery (T6)
+### 12.3 Overload and Recovery (Test B)
 
 **Hypothesis H4:** Under a 300-second, 130% overload episode:
 
 | SUT | Predicted recovery time |
 |-----|------------------------|
-| T1 HIKARI_DIRECT | 5–30 s (HikariCP connection queue drains quickly after load drops) |
-| T3 PGBOUNCER (3 instances + HAProxy) | 5–60 s (PgBouncer `cl_waiting` queue drains across 3 instances; total queue = 3 × reserve_pool_size) |
-| T4 OJP (3 instances, client-side LB) | 5–60 s (OJP queue drains across 3 instances; depends on `queueLimit` per instance) |
+| SUT-A HikariCP Disciplined | 5–30 s (HikariCP connection queue drains quickly after load drops) |
+| SUT-B OJP (3 nodes + client-side LB) | 5–60 s (OJP queue drains across 3 nodes; depends on `queueLimit` per instance) |
+| SUT-C PgBouncer (3 nodes + HAProxy) | 5–60 s (PgBouncer `cl_waiting` queue drains across 3 instances) |
 
-Recovery time is expected to correlate with the length of the request queue at the moment load is
-reduced. A system with large queue buffers (high `max_client_conn` in PgBouncer or high
-`queueLimit` in OJP) will accumulate more queued requests during overload and therefore take longer
-to drain. A system that drops requests (connection pool exhaustion) will have a shorter apparent
-queue but a higher error rate during overload.
+### 12.4 Expected Resource Consumption
 
-**The trade-off between queue depth, error rate during overload, and recovery time is a primary
-finding of this study.**
-
-### 11.4 Prepared Statement Overhead (Cross-cutting)
-
-**Hypothesis H5:** PgBouncer in transaction mode causes measurable overhead relative to HIKARI_DIRECT
-in scenarios where the workload heavily uses the PostgreSQL extended query protocol (prepared
-statements). This overhead, if present, will manifest as increased p99 latency and will be larger
-for the W2_READ_WRITE workload (which uses explicit multi-statement transactions) than for the
-W1_READ_ONLY workload (single-statement transactions).
-
-### 11.5 Expected Resource Consumption
-
-The following approximate CPU and memory usage is expected during the steady-state measurement
-window at 1,000 RPS. These are guiding values for capacity planning and anomaly detection, not
-acceptance criteria. If any node consistently exceeds these bounds, it is likely the bottleneck
-and the result should be flagged.
-
-The **same three proxy machines** are used for both the T3 (PgBouncer) and T4 (OJP) test runs.
-PgBouncer is stopped and OJP is started on each machine between scenario runs. This ensures the
-hardware is identical across the two proxy SUTs and eliminates machine-to-machine variation as a
-confounding factor.
-
-#### Load Generator / Application Tier (LG and APP)
+#### Load Generator Machines (LG-1 and LG-2)
 
 | Resource | Expected value |
 |----------|---------------|
-| CPU | 2–4 cores (out of 8) for the bench JVM; spikes to 6 cores during warm-up |
-| Heap (JVM) | 3–6 GB live data (within `-Xmx8g`); GC pauses < 10 ms with G1GC |
-| Network TX | 20–80 Mbps (small query payloads; dominated by connection-setup overhead at high RPS) |
+| CPU | 2–4 cores (out of 8) for 8 bench JVM replicas; spikes to 6 cores during warm-up |
+| Heap (JVM) | ≈ 4 GB live data (8 × 500 MB); GC pauses < 10 ms with G1GC |
+| Network TX | 20–80 Mbps |
 | Network RX | 30–100 Mbps |
 
-At 1,000 RPS each open-loop worker thread performs one SQL round-trip per slot. CPU usage is
-bounded by the number of in-flight requests, not by throughput alone. If CPU on LG exceeds 75%
-sustained, the load generator itself is the bottleneck; reduce `targetRps` or distribute replicas
-further.
-
-#### Load Balancer — HAProxy (LB, T3 only)
+#### Load Balancer — HAProxy (LB, SUT-C only)
 
 | Resource | Expected value |
 |----------|---------------|
-| CPU | < 0.5 cores (HAProxy TCP mode, no TLS termination) |
-| Memory | < 200 MB (connection state for up to 10,000 concurrent sessions) |
-| Network TX + RX | ≈ same as aggregate LG traffic — HAProxy is transparent at layer 4 |
+| CPU | < 0.5 cores (TCP mode, plaintext) |
+| Memory | < 200 MB |
+| Network TX + RX | ≈ same as aggregate LG-1/LG-2 traffic |
 
-HAProxy in TCP pass-through mode has negligible CPU overhead. If HAProxy CPU exceeds 1 core, TLS
-or application-layer inspection has accidentally been enabled.
-
-#### Proxy Tier — PgBouncer (T3)
+#### Proxy Tier — PgBouncer (SUT-C)
 
 Per instance (× 3 identical machines):
 
 | Resource | Expected value |
 |----------|---------------|
-| CPU | 0.5–1.5 cores (PgBouncer is single-threaded; one core handles ~50 K simple TPS) |
-| Memory | 50–150 MB (connection state for 100 backend + up to 2,000 client connections) |
-| Network | ≈ LG-to-proxy traffic forwarded to DB; proportional to query payload size |
+| CPU | 0.5–1.5 cores (PgBouncer is single-threaded; one core saturates at ~50k TPS) |
+| Memory | 50–150 MB (100 backend + up to 2,000 client connections) |
+| Network | ≈ LG-1/LG-2-to-proxy traffic forwarded to DB; proportional to query payload size |
 
-Because PgBouncer is single-threaded, CPU usage will never exceed 1 core regardless of load. If
-`SHOW POOLS` shows `cl_waiting > 0` sustained and CPU is at 100% on the one core, PgBouncer is
-saturated.
+#### Proxy Tier — OJP Server (SUT-B)
 
-#### Proxy Tier — OJP Server (T4)
-
-Per instance (× 3 identical machines). OJP is a JVM-based server (gRPC / Netty transport).
-JVM memory has three distinct buckets; all three must be reported to get an accurate picture.
-
-**Bucket A — JVM heap (Java objects; controlled by `-Xmx`)**
-
-| Sub-bucket | Expected value |
-|-----------|---------------|
-| Live data (after full GC) | 100–200 MB (connection state, queue state, codec buffers) |
-| GC headroom (G1 default: 45% occupancy target) | +120–260 MB |
-| Heap committed to OS (`-Xms` or G1 adaptive) | **300–512 MB** |
-
-Recommended flag: `-Xms512m -Xmx512m` (fixed heap prevents adaptive-resize jitter during
-measurement). With G1GC (`-XX:+UseG1GC`) GC pauses at this heap size are < 5 ms at 1,000 RPS.
-
-**Bucket B — Off-heap / native memory (tracked by NMT)**
-
-| Component | Expected value |
-|-----------|---------------|
-| Metaspace (class metadata) | 80–130 MB |
-| Code cache (JIT compiled code) | 60–100 MB |
-| Thread stacks (Netty event loops + worker threads, ~40 threads × 512 KB) | 20–30 MB |
-| Direct byte buffers (Netty I/O buffers for gRPC framing) | 50–150 MB |
-| GC data structures (G1 region metadata) | 20–40 MB |
-| Other JVM internals | 20–40 MB |
-| **Bucket B total** | **250–490 MB** |
-
-**Bucket C — OS-level RSS (what `ps` / `top` / `/proc/<pid>/status VmRSS` reports)**
-
-RSS ≈ Bucket A (heap committed) + Bucket B (NMT total) + OS mmap overhead.
-Expected RSS per OJP instance: **600 MB–1.1 GB**.
-
-**Measurement commands** (run during steady-state T4 measurement window):
-
-```bash
-# Enable NMT before starting OJP — add to JVM flags:
-# -XX:NativeMemoryTracking=summary
-
-# Collect NMT snapshot (replace <pid> with OJP process ID):
-jcmd <pid> VM.native_memory summary scale=MB > results/t4-ojp/nmt-$(hostname).txt
-
-# OS-level RSS:
-ps -o pid,rss,vsz,comm -p <pid>
-# or
-cat /proc/<pid>/status | grep -E "VmRSS|VmPeak|VmSize"
-
-# GC pause log — add to JVM flags:
-# -Xlog:gc*:file=logs/ojp-gc.log:time,uptime:filecount=5,filesize=20m
-```
-
-Save all three outputs to `results/t4-ojp/` for disclosure in the publication. If any GC pause
-exceeds 20 ms during the measurement window, the pause timestamp must be correlated with the
-`timeseries.csv` p95 values and disclosed.
-
-**Recommended OJP JVM flags for this experiment:**
-
-```
--Xms512m -Xmx512m
--XX:+UseG1GC
--XX:MaxGCPauseMillis=10
--XX:NativeMemoryTracking=summary
--Xlog:gc*:file=logs/ojp-gc.log:time,uptime:filecount=5,filesize=20m
-```
+Per instance (× 3 identical machines):
 
 | Resource | Expected value |
 |----------|---------------|
 | CPU | 1–3 cores (Netty event loops; scales with in-flight gRPC streams) |
-| Heap committed (Bucket A) | 300–512 MB |
-| Off-heap / native (Bucket B) | 250–490 MB |
-| **Total RSS (Bucket C)** | **600 MB–1.1 GB** |
-| Network | ≈ same as PgBouncer — forwarding query traffic to DB |
+| Heap committed | 300–512 MB |
+| Off-heap / native (NMT) | 250–490 MB |
+| **Total RSS** | **600 MB–1.1 GB** |
 
 #### Database Server (DB)
 
@@ -1276,36 +1234,36 @@ exceeds 20 ms during the measurement window, the pause timestamp must be correla
 |----------|---------------|
 | CPU | 4–10 cores (out of 16) at 1,000 RPS on cache-warm W2_MIXED workload |
 | Memory | 65–70 GB resident (64 GB `shared_buffers` + OS page cache + working memory) |
-| Storage I/O | Near zero read IOPS if dataset fits in `shared_buffers`; 5–20 MB/s WAL writes |
-| Network | 50–150 Mbps (query results + WAL streaming if replicas are attached) |
+| Storage I/O | Near zero read IOPS; 5–20 MB/s WAL writes |
+| Network | 50–150 Mbps |
 
-If DB CPU exceeds 80% sustained, the workload has hit the compute limit of the DB tier, not the
-proxy tier. Reduce `targetRps` until DB CPU drops below 70% before comparing proxy SUTs.
+If DB CPU exceeds 80% sustained, the workload has hit the compute limit of the DB tier.
+Reduce `targetRps` until DB CPU drops below 70% before comparing proxy SUTs.
 
 #### Summary Table
 
 | Node | CPU (expected) | Memory (expected) | Notes |
 |------|---------------|-------------------|-------|
-| LG / APP | 2–4 cores | 3–6 GB JVM heap | Bottleneck if CPU > 75% |
-| LB (HAProxy, T3 only) | < 0.5 cores | < 200 MB | T3 only; negligible overhead |
-| PROXY ×3 — PgBouncer (T3) | 0.5–1.5 cores | 50–150 MB | Single-threaded; saturates at 1 core |
-| PROXY ×3 — OJP (T4) | 1–3 cores | 600 MB–1.1 GB RSS | Heap 300–512 MB + off-heap 250–490 MB; collect NMT |
+| LG-1 / LG-2 | 2–4 cores | ~4 GB JVM heap | Bottleneck if CPU > 75% |
+| LB (HAProxy, SUT-C only) | < 0.5 cores | < 200 MB | Plaintext TCP mode |
+| PROXY ×3 — PgBouncer (SUT-C) | 0.5–1.5 cores | 50–150 MB | Single-threaded; saturates at 1 core |
+| PROXY ×3 — OJP (SUT-B) | 1–3 cores | 600 MB–1.1 GB RSS | Heap 300–512 MB + off-heap 250–490 MB; collect NMT |
 | DB | 4–10 cores | 65–70 GB | Bottleneck if CPU > 80% |
 
 ---
 
-## 12. Analysis Procedure
+## 13. Analysis Procedure
 
-### 12.1 Throughput–Latency Curves
+### 13.1 Throughput–Latency Curves
 
-For each SUT, plot the throughput–latency curve using sweep data from T5:
+For each SUT, plot the throughput–latency curve using sweep data from Test A:
 
-- X axis: offered load (RPS), from T5 sweep
+- X axis: offered load (aggregate RPS across 16 clients)
 - Y axis: p95 latency (ms), log scale
 - Mark the MST point with a vertical dashed line
-- Overlay curves for T1, T3, and T4 on the same axes for direct comparison
+- Overlay curves for SUT-A, SUT-B, and SUT-C on the same axes for direct comparison
 
-### 12.2 CDF Plots
+### 13.2 CDF Plots
 
 For each point at or near the MST, plot the cumulative latency distribution using the HdrHistogram
 `.hdr` files:
@@ -1314,13 +1272,13 @@ For each point at or near the MST, plot the cumulative latency distribution usin
 # Use the HdrHistogram HistogramLogProcessor (available from the hdrhistogram project)
 java -cp hdrhistogram-tools.jar \
   org.HdrHistogram.HistogramLogProcessor \
-  -i results/t3-pgbouncer/raw/.../latency.hdr \
-  -o results/t3-pgbouncer-cdf.csv
+  -i results/sut-c-pgbouncer/raw/.../latency.hdr \
+  -o results/sut-c-pgbouncer-cdf.csv
 ```
 
 Plot percentile (log scale) on X axis against latency (ms) on Y axis.
 
-### 12.3 Recovery Time Plot (T6)
+### 13.3 Recovery Time Plot (Test B)
 
 For each SUT, plot the per-second p95 latency timeseries from `timeseries.csv`:
 
@@ -1331,15 +1289,15 @@ For each SUT, plot the per-second p95 latency timeseries from `timeseries.csv`:
 - The recovery time for each SUT is the distance between t=600 and the point where the timeseries
   crosses back below the SLO line and remains there
 
-### 12.4 Statistical Reporting
+### 13.4 Statistical Reporting
 
 Because each scenario is repeated 5 times, report:
 
 - Median (50th percentile) of achieved throughput across 5 runs
 - Median p95 latency across 5 runs
 - Inter-quartile range (IQR) of p95 latency across 5 runs as a measure of run-to-run variability
-- For T6, report recovery time from a single run (T6 is inherently transient and is not amenable
-  to simple repetition averaging)
+- For Test B, report recovery time from a single run (overload/recovery is inherently transient
+  and is not amenable to simple repetition averaging)
 
 Do not use arithmetic mean of latency percentiles across runs. Means of percentiles are
 mathematically incoherent. Use the median run's p95 value or, if HDR histogram merging is
@@ -1347,7 +1305,7 @@ implemented, compute the aggregate p95 from the merged histogram.
 
 ---
 
-## 13. Known Limitations
+## 14. Known Limitations
 
 The following limitations are inherent to the current tool implementation. They must be disclosed
 in any publication that uses these results.
@@ -1360,29 +1318,29 @@ in any publication that uses these results.
    results at loads above MST should be interpreted with caution; the observed latency may
    underestimate the true steady-state latency under overload.
 
-2. **No replica synchronisation barrier.** In multi-replica runs (T2), each replica starts
-   independently. The actual aggregate load during the first 5–10 seconds of steady state may be
-   lower than intended. The measurement window excludes the warm-up phase, but the transition from
-   warm-up to steady state is not barrier-synchronised. The per-second timeseries can be inspected
-   to verify that aggregate RPS reaches the intended level within 10 seconds of steady-state start.
+2. **No replica synchronisation barrier.** Each of the 16 replicas starts independently. The
+   actual aggregate load during the first 5–10 seconds of steady state may be lower than intended.
+   The measurement window excludes the warm-up phase, but the transition from warm-up to steady
+   state is not barrier-synchronised. The per-second timeseries can be inspected to verify that
+   aggregate RPS reaches the intended level within 10 seconds of steady-state start.
 
 3. **Per-interval percentiles in timeseries.csv are cumulative.** The p95 value in each row of
    `timeseries.csv` is the p95 of the cumulative histogram from the start of the measurement
-   window, not from the start of that one-second interval. For T1–T5 (steady-state analysis) this
-   does not affect the final summary statistics. For T6 (recovery analysis) it means that the
+   window, not from the start of that one-second interval. For Test A (steady-state analysis) this
+   does not affect the final summary statistics. For Test B (recovery analysis) it means that the
    per-second p95 values in `timeseries.csv` are smoothed by history and will underestimate the
    instantaneous p95 during the recovery transition. The reported recovery time is therefore a
    conservative (longer) estimate.
 
-4. **No automatic cross-replica aggregation.** For T2, the aggregate throughput must be computed
-   manually by summing `achievedThroughputRps` across all 16 `summary.json` files. The `aggregate`
-   command is a placeholder and does not implement HDR histogram merging.
+4. **No automatic cross-replica aggregation.** The aggregate throughput must be computed manually
+   by summing `achievedThroughputRps` across all 16 `summary.json` files. The `aggregate` command
+   is a placeholder and does not implement HDR histogram merging.
 
 5. **No JVM or DB server metrics collected automatically.** CPU utilisation, GC pause duration,
-   and `pg_stat_activity` data must be collected separately using OS-level tools (`vmstat`, `iostat`,
-   `pgBadger`, or `pg_activity`). This tool captures latency and throughput from the client
-   perspective only.
+   and `pg_stat_activity` data must be collected separately using OS-level tools (`vmstat`,
+   `iostat`, `pgBadger`, or `pg_activity`). This tool captures latency and throughput from the
+   client perspective only.
 
 ---
 
-*Document version: 1.0 — February 2026*
+*Document version: 2.0 — March 2026*
